--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="hero-section"></div>
 
             <header>
-                  <img src="img/netflix-logo.png" alt="">
+                  <img src="" alt="">
                   <div class="buttons">
                         <select name="english" id="" class="lang-btn">
                               <option value="English">English</option>
@@ -51,7 +51,7 @@
             </div>
 
             <div class="tv-img">
-                  <img src="img/tv.png" alt="" width="520px" height="400px">
+                  
             </div>
       </section>
       <div class="line"></div>
@@ -60,7 +60,7 @@
       <!-- Stranger things section -->
       <section class="sections">
             <div class="stranger-things-img">
-                  <img src="img/stranger-things.jpg" alt="" width="540px" height="380px">
+                  
             </div>
 
             <div class="watch-offline box">
@@ -79,7 +79,6 @@
             </div>
 
             <div class="apple-tv">
-                  <img src="img/device-pile-in.png" alt="" width="480px" height="350px">
             </div>
       </section>
       <div class="line"></div>
@@ -87,7 +86,6 @@
       <!-- Kids section -->
       <section class="sections">
             <div class="children-img">
-                  <img src="img/children.png" alt="" width="500px" height="400px">
             </div>
 
             <div class="kids-profile box">
