--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <header>
                   <img src="" alt="">
                   <div class="buttons">
-                        <select name="english" id="" class="lang-btn">
+                        <select name="english" class="lang-btn">
                               <option value="English">English</option>
                               <option value="Hindi">Hindi</option>
                         </select>
 
-                        <button class="signIn-btn" href="#">Sign In</button>
+                        <button class="signIn-btn">Sign In</button>
                   </div>
             </header>
 
@@ -34,7 +34,7 @@
                   <p>Watch anywhere. Cancel anytime.</p>
                   <p>Ready to watch? Enter your email to create or restart your membership.</p>
 
-                  <form action="">
+                  <form>
                         <input type="text" placeholder="Email Address" id="email" required>
                         <input type="submit" value="Get Started!">
                   </form>
@@ -210,8 +210,8 @@
 
             <div class="signin">
                   <p>Ready to watch? Enter your email to create or restart your membership.</p>
-                  <form action="">
-                        <input type="text" placeholder="Email address" id="email" required>
+                  <form>
+                        <input type="text" placeholder="Email address" required>
                         <input type="submit" value="Get Started!">
                   </form>
             </div>
@@ -223,30 +223,31 @@
             <p class="para1">Questions? Call <a href="#">000-800-919-1694 </a> </p>
             <div class="info-pages">
                   <ul class="info-block">
-                        <a href="#">FAQ</a>
-                        <a href="#">Investor Relations</a>
-                        <a href="#">Privacy</a>
-                        <a href="#">Speed Test </a>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Investor Relations</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Speed Test </a></li>                                       
                   </ul>
 
                   <ul class="info-block">
-                        <a href="#">Help Centre</a>
-                        <a href="#">Jobs</a>
-                        <a href="#">Cookie Preferences</a>
-                        <a href="#">Legal Notices</a>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Investor Relations</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Speed Test </a></li>
                   </ul>
 
                   <ul class="info-block">
-                        <a href="#">Account</a>
-                        <a href="#">Ways to Watch</a>
-                        <a href="#">Corporate Information</a>
-                        <a href="#">Only on Netflix</a>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Investor Relations</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Speed Test </a></li>
                   </ul>
 
                   <ul class="info-block">
-                        <a href="#">Media Centre</a>
-                        <a href="#">Terms of Use </a>
-                        <a href="#">Contact Us</a>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Investor Relations</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Speed Test </a></li>
                   </ul>
 
             </div>
