--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
       <link rel="stylesheet" href="style.css">
-      <link rel="icon" href="https://www.bing.com/ck/a?!&&p=30a5a8c82aad1997JmltdHM9MTcyMTg2NTYwMCZpZ3VpZD0yMzQ5NWM4MC0xYjdmLTZiZTQtMTg1ZS00OGQ4MWE4ZDZhMDcmaW5zaWQ9NTgwNg&ptn=3&ver=2&hsh=3&fclid=23495c80-1b7f-6be4-185e-48d81a8d6a07&u=a1L2ltYWdlcy9zZWFyY2g_cT1uZXRmbGl4JTIwbG9nbyZGT1JNPUlRRlJCQSZpZD01RjY5OUYyRURDOTk5QTU2OEI3MDU1NzI2NDQ2NTY1RDA0MjAxMzM1&ntb=1" type="image/icon type">
+      <link rel="icon" href="https://www.bing.com/ck/a?!&&p=30a5a8c82aad1997JmltdHM9MTcyMTg2NTYwMCZpZ3VpZD0yMzQ5NWM4MC0xYjdmLTZiZTQtMTg1ZS00OGQ4MWE4ZDZhMDcmaW5zaWQ9NTgwNg&ptn=3&ver=2&hsh=3&fclid=23495c80-1b7f-6be4-185e-48d81a8d6a07&u=a1L2ltYWdlcy9zZWFyY2g_cT1uZXRmbGl4JTIwbG9nbyZGT1JNPUlRRlJCQSZpZD01RjY5OUYyRURDOTk5QTU2OEI3MDU1NzI2NDQ2NTY1RDA0MjAxMzM1&ntb=1" type="image/icon">
 </head>
 
 <body>
@@ -18,7 +18,6 @@
             <div class="hero-section"></div>
 
             <header>
-                  <img src="" alt="">
                   <div class="buttons">
                         <select name="english" class="lang-btn">
                               <option value="English">English</option>
@@ -46,7 +45,7 @@
       <!-- Enjoy tv section -->
       <section class="sections">
             <div class="enjoy-tv box">
-                  <h1>Enjoy on your TV </h1>
+                  <h2>Enjoy on your TV </h2>
                   <p>Watch on smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-Ray players and more.</p>
             </div>
 
@@ -64,7 +63,7 @@
             </div>
 
             <div class="watch-offline box">
-                  <h1>Download your shows to watch offline</h1>
+                  <h2>Download your shows to watch offline</h2>
                   <p>Save your favourites easily and always have something to watch.</p>
             </div>
       </section>
@@ -74,7 +73,7 @@
       <!-- Watch anywhere section -->
       <section class="sections">
             <div class="watch box">
-                  <h1>Watch everywhere</h1>
+                  <h2>Watch everywhere</h2>
                   <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
             </div>
 
@@ -89,7 +88,7 @@
             </div>
 
             <div class="kids-profile box">
-                  <h1>Create profiles for kids</h1>
+                  <h2>Create profiles for kids</h2>
                   <p>Send children on adventures with their favourite characters in a space made just for them—free with
                         your membership.</p>
             </div>
@@ -100,7 +99,7 @@
 
       <!-- FAQs section -->
       <section class="faqs" id="faqs">
-            <h1>Frequently Asked Questions</h1>
+            <h2>Frequently Asked Questions</h2>
 
             <div class="faqs_container">
                   <div class="faq_item">
