--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="hero-section"></div>
 
             <header>
+                  <img src="img/netflix-logo.png" alt="">
                   <div class="buttons">
                         <select name="english" class="lang-btn">
                               <option value="English">English</option>
@@ -50,7 +51,7 @@
             </div>
 
             <div class="tv-img">
-                  
+                  <img src="img/tv.png" alt="" />
             </div>
       </section>
       <div class="line"></div>
@@ -59,7 +60,7 @@
       <!-- Stranger things section -->
       <section class="sections">
             <div class="stranger-things-img">
-                  
+                  <img src="img/stranger-things.jpg" alt="" />
             </div>
 
             <div class="watch-offline box">
@@ -78,6 +79,7 @@
             </div>
 
             <div class="apple-tv">
+                  <img src="img/device-pile-in.png" alt="" />
             </div>
       </section>
       <div class="line"></div>
@@ -85,6 +87,7 @@
       <!-- Kids section -->
       <section class="sections">
             <div class="children-img">
+                  <img src="img/children.png" alt="" />
             </div>
 
             <div class="kids-profile box">
