--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <!-- FAQs section -->
       <section class="faqs" id="faqs">
-            <h2>Frequently Asked Questions</h2>
+            <h2 class="faq-heading">Frequently Asked Questions</h2>
 
             <div class="faqs_container">
                   <div class="faq_item">
