--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                   <p>Ready to watch? Enter your email to create or restart your membership.</p>
 
                   <form>
-                        <input type="text" placeholder="Email Address" id="email" required>
-                        <input type="submit" value="Get Started!">
+                        <input type="text" placeholder="Email Address" id="email" required />
+                        <input type="submit" value="Get Started!" />
                   </form>
             </div>
             <div class="line"></div>
@@ -46,7 +46,7 @@
       <!-- Enjoy tv section -->
       <section class="sections">
             <div class="enjoy-tv box">
-                  <h2>Enjoy on your TV </h2>
+                  <h2>Enjoy on your TV</h2>
                   <p>Watch on smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-Ray players and more.</p>
             </div>
 
