--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
 
 <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Netflix</title>
+    <meta charset="UTF-8">
+    <link rel="icon" href="Microsoft_logo.svg.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Netflix clone</title>
 
-      <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-      <link rel="stylesheet" href="style.css">
-      <link rel="icon" href="https://www.bing.com/ck/a?!&&p=30a5a8c82aad1997JmltdHM9MTcyMTg2NTYwMCZpZ3VpZD0yMzQ5NWM4MC0xYjdmLTZiZTQtMTg1ZS00OGQ4MWE4ZDZhMDcmaW5zaWQ9NTgwNg&ptn=3&ver=2&hsh=3&fclid=23495c80-1b7f-6be4-185e-48d81a8d6a07&u=a1L2ltYWdlcy9zZWFyY2g_cT1uZXRmbGl4JTIwbG9nbyZGT1JNPUlRRlJCQSZpZD01RjY5OUYyRURDOTk5QTU2OEI3MDU1NzI2NDQ2NTY1RDA0MjAxMzM1&ntb=1" type="image/icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-      <!-- Main section -->
-      <main>
             <div class="hero-section"></div>
 
             <header>
@@ -40,7 +42,7 @@
                   </form>
             </div>
             <div class="line"></div>
-      </main>
+
 
 
       <!-- Enjoy tv section -->
