--- a/index.html
+++ b/index.html
@@ -2,46 +2,41 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="Microsoft_logo.svg.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Netflix clone</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Netflix Clone</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-    <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+      <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-            <div class="hero-section"></div>
+      <div class="hero-section"></div>
 
-            <header>
-                  <img src="img/netflix-logo.png" alt="">
-                  <div class="buttons">
-                        <select name="english" class="lang-btn">
-                              <option value="English">English</option>
-                              <option value="Hindi">Hindi</option>
-                        </select>
+      <header>
+            <img src="img/netflix-logo.png" alt=".." />
+            <div class="buttons">
+                  <select name="english" class="lang-btn">
+                        <option value="English">English</option>
+                        <option value="Hindi">Hindi</option>
+                  </select>
 
-                        <button class="signIn-btn">Sign In</button>
-                  </div>
-            </header>
-
-            <div class="info">
-                  <h1>Unlimited movies, TV shows and more</h1>
-                  <p>Watch anywhere. Cancel anytime.</p>
-                  <p>Ready to watch? Enter your email to create or restart your membership.</p>
-
-                  <form>
-                        <input type="text" placeholder="Email Address" id="email" required />
-                        <input type="submit" value="Get Started!" />
-                  </form>
+                  <button class="signIn-btn">Sign In</button>
             </div>
-            <div class="line"></div>
+      </header>
+
+      <div class="info">
+            <h1>Unlimited movies, TV shows and more</h1>
+            <p>Watch anywhere. Cancel anytime.</p>
+            <p>Ready to watch? Enter your email to create or restart your membership.</p>
+
+            <form>
+                  <input type="text" placeholder="Email Address" required />
+                  <input type="submit" value="Get Started!" />
+            </form>
+      </div>
+      <div class="line"></div>
 
 
       <section class="sections">
@@ -94,10 +89,9 @@
                         your membership.</p>
             </div>
       </section>
-
       <div class="line"></div>
 
-    
+
       <section class="faqs" id="faqs">
             <h2 class="faq-heading">Frequently Asked Questions</h2>
 
@@ -219,13 +213,13 @@
 
 
       <footer>
-            <p class="para1">Questions? Call <a href="#">000-800-919-1694 </a> </p>
+            <p class="para1">Questions? Call <a href="#">000-800-919-1694 </a></p>
             <div class="info-pages">
                   <ul class="info-block">
                         <li><a href="#">FAQ</a></li>
                         <li><a href="#">Investor Relations</a></li>
                         <li><a href="#">Privacy</a></li>
-                        <li><a href="#">Speed Test </a></li>                                       
+                        <li><a href="#">Speed Test </a></li>
                   </ul>
 
                   <ul class="info-block">
@@ -255,4 +249,5 @@
 
       <script src="script.js"></script>
 </body>
+
 </html>
